# lab1

./: CMakeLists.txt  README.md
lab1_variant1/: main.cpp
lab1_variant1/include/: foo.h
lab1_variant1/src/: countOnesBin.cpp
lab2_variant1/: CMakeLists.txt  main.cpp
lab2_variant1/include/: decimal.h
lab2_variant1/src/: decimal.cpp
lab3_variant29/: CMakeLists.txt  main.cpp
lab3_variant29/include/: Figure.h  Hexagon.h  Pentagon.h  Rhombus.h
lab3_variant29/src/: Figure.cpp  Hexagon.cpp  Pentagon.cpp  Rhombus.cpp
lab4_variant29/: main.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp
